--- a/schooladmin/attendance.html
+++ b/schooladmin/attendance.html
@@ -13,6 +13,30 @@
   <link rel="stylesheet" href="css/dashboard.css">
 
   <style>
+
+    /* ===== MOBILE HAMBURGER SIDEBAR ===== */
+@media (max-width: 768px) {
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 240px;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
+    z-index: 1050;
+  }
+
+  .sidebar.mobile-visible {
+    transform: translateX(0);
+  }
+
+  .content {
+    margin-left: 0 !important;
+  }
+}
+
+
     .content { padding-bottom: 40px; }
     .search-row { max-width: 50%; min-width: 300px; }
     .filters-row .form-select { min-width: 180px; }
@@ -236,6 +260,15 @@ Alignment Cleanup
         <button id="logoutBtn" class="logout-btn w-100"><i class="bi bi-box-arrow-right me-2"></i>Logout</button>
       </div>
     </nav>
+
+    <!-- Mobile Top Bar (for small screens) -->
+      <div class="d-md-none d-flex align-items-center mb-3">
+        <button id="sidebarToggle" class="btn btn-light border me-2">
+          <i class="bi bi-list fs-4"></i>
+        </button>
+        <span class="fw-bold">Attendance</span>
+      </div>
+
 
     <!-- Main content -->
     <main class="content flex-grow-1 p-4">
