--- a/schooladmin/attendance.html
+++ b/schooladmin/attendance.html
@@ -553,5 +553,31 @@ Alignment Cleanup
   const app = initializeApp(firebaseConfig);
   const analytics = getAnalytics(app);
 </script>
+
+<script>
+const sidebar = document.querySelector('.sidebar');
+const sidebarToggle = document.getElementById('sidebarToggle');
+
+// Toggle sidebar visibility on click
+sidebarToggle?.addEventListener('click', () => {
+  sidebar.classList.toggle('mobile-visible');
+});
+
+// Close sidebar when clicking outside
+document.addEventListener('click', function(e) {
+  if (window.innerWidth < 768) {
+    if (
+      sidebar &&
+      sidebarToggle &&
+      !sidebar.contains(e.target) &&
+      !sidebarToggle.contains(e.target)
+    ) {
+      sidebar.classList.remove('mobile-visible');
+    }
+  }
+});
+</script>
+
+
 </body>
 </html>
