--- a/schooladmin/attendance.html
+++ b/schooladmin/attendance.html
@@ -14,6 +14,41 @@
 
   <style>
 
+    /* ===== MOBILE READABILITY FIX ===== */
+@media (max-width: 768px) {
+
+  body {
+    font-size: 14px !important;
+  }
+
+  .content {
+    padding: 14px !important;
+  }
+
+  .table th, .table td {
+    font-size: 13px !important;
+    padding: 8px 6px !important;
+  }
+
+  .sidebar {
+    width: 220px !important;
+  }
+
+  h1, h2, h3 {
+    font-size: 16px !important;
+  }
+
+  .badge {
+    font-size: 12px !important;
+  }
+
+  button, .btn {
+    font-size: 13px !important;
+  }
+
+}
+
+
     /* ===== MOBILE HAMBURGER SIDEBAR ===== */
 @media (max-width: 768px) {
   .sidebar {
