--- a/schooladmin/attendance.html
+++ b/schooladmin/attendance.html
@@ -343,10 +343,17 @@ Alignment Cleanup
   <div class="d-flex">
     <!-- Sidebar -->
     <nav class="sidebar">
-      <div class="sidebar-header d-flex align-items-center mb-4">
-        <i class="bi bi-mortarboard-fill sidebar-icon"></i>
-        <span class="fw-bold">School Admin</span>
-      </div>
+      <div class="sidebar-header d-flex align-items-center justify-content-between mb-4">
+          <div class="d-flex align-items-center gap-2">
+            <i class="bi bi-mortarboard-fill sidebar-icon"></i>
+            <span class="fw-bold">School Admin</span>
+          </div>
+
+          <!-- Mobile Close Button -->
+          <button id="closeSidebarBtn" class="btn btn-sm btn-light d-md-none">
+            <i class="bi bi-x-lg"></i>
+          </button>
+        </div>
 
       <ul class="nav flex-column px-3">
         <li class="nav-item"><a href="dashboard.html" class="nav-link"><i class="bi bi-speedometer2 me-2"></i>Dashboard</a></li>
@@ -658,6 +665,12 @@ Alignment Cleanup
 <script>
 const sidebar = document.querySelector('.sidebar');
 const sidebarToggle = document.getElementById('sidebarToggle');
+const closeSidebarBtn = document.getElementById('closeSidebarBtn');
+
+closeSidebarBtn?.addEventListener('click', () => {
+  sidebar.classList.remove('mobile-visible');
+});
+
 
 // Toggle sidebar visibility on click
 sidebarToggle?.addEventListener('click', () => {
