--- a/schooladmin/attendance.html
+++ b/schooladmin/attendance.html
@@ -14,6 +14,13 @@
 
   <style>
 
+    @media (max-width: 768px) {
+  .d-md-none span.fw-bold {
+    letter-spacing: 0.3px;
+  }
+}
+
+
     /* ===== MOBILE MASTER FIX ===== */
 @media (max-width: 768px) {
 
