--- a/schooladmin/attendance.html
+++ b/schooladmin/attendance.html
@@ -14,6 +14,30 @@
 
   <style>
 
+    /* Small Sidebar Close Button */
+.sidebar-close-btn {
+  background: rgba(255,255,255,0.15);
+  border: none;
+  width: 28px;
+  height: 28px;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  padding: 0;
+}
+
+.sidebar-close-btn i {
+  font-size: 14px;
+}
+
+.sidebar-close-btn:hover {
+  background: rgba(255,255,255,0.25);
+}
+
+
+
     @media (max-width: 768px) {
   .d-md-none span.fw-bold {
     letter-spacing: 0.3px;
@@ -357,10 +381,10 @@ Alignment Cleanup
           </div>
 
           <!-- Mobile Close Button -->
-          <button id="closeSidebarBtn" class="btn btn-sm btn-light d-md-none">
-            <i class="bi bi-x-lg"></i>
+          <button id="closeSidebarBtn" class="sidebar-close-btn d-md-none">
+            <i class="bi bi-x"></i>
           </button>
-        </div>
+
 
       <ul class="nav flex-column px-3">
         <li class="nav-item"><a href="dashboard.html" class="nav-link"><i class="bi bi-speedometer2 me-2"></i>Dashboard</a></li>
